--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
       href="https://raw.githubusercontent.com/ddelaat-embrace/templates/main/embrace.css"
       rel="stylesheet"
       type="text/css"
+      data-preload="true"
     />
     <style id="common">
       @font-face {
