Use Github Pages

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
       type="text/css"
     />
     <link
-      href="https://raw.githubusercontent.com/ddelaat-embrace/templates/main/embrace.css"
+      href="https://ddelaat-embrace.github.io/templates/embrace.css"
       rel="stylesheet"
       type="text/css"
       data-preload="true"
