--- a/unified.html
+++ b/unified.html
@@ -12,10 +12,11 @@
       type="text/css"
     />
     <link
-      href="https://ddelaat-embrace.github.io/templates/embrace.css"
+      href="https://ddelaat-embrace.github.io/templates/css/main.css"
       rel="stylesheet"
       type="text/css"
     />
+    <script src="https://ddelaat-embrace.github.io/templates/js/main.js"></script>
     <style id="common">
       @font-face {
         font-family: "SegoeUI";
