--- a/selfAsserted.html
+++ b/selfAsserted.html
@@ -12,10 +12,11 @@
       type="text/css"
     />
     <link
-      href="https://ddelaat-embrace.github.io/templates/embrace.css"
+      href="https://ddelaat-embrace.github.io/templates/css/main.css"
       rel="stylesheet"
       type="text/css"
     />
+    <script src="https://ddelaat-embrace.github.io/templates/js/main.js"></script>
     <style id="common">
       @font-face {
         font-family: "SegoeUI";
@@ -1165,12 +1166,11 @@
         <div class="col-lg-6">
           <div class="panel panel-default">
             <div class="panel-body">
-              <img
+              <div
                 class="companyLogo"
                 data-tenant-branding-logo="true"
-                src="https://epicdn.blob.core.windows.net/assets-dev/whitelabel/logos/myembrace.png"
                 alt="Company Logo"
-              />
+              ></div>
               <div id="api" role="main"></div>
             </div>
           </div>
