--- a/unified.html
+++ b/unified.html
@@ -1613,11 +1613,11 @@
         <div class="col-lg-6">
           <div class="panel panel-default">
             <div class="panel-body">
-              <img
+              <div
                 class="companyLogo"
                 data-tenant-branding-logo="true"
                 alt="Company Logo"
-              />
+              ></div>
               <div id="api" role="main"></div>
             </div>
           </div>
